# 3-python-package-pyckle-jar

./: Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: Pipfile  python-package.yml
example/: example.py  manual_test.py
excuse_generator/: __init__.py  __main__.py  excuses.py
tests/: _test.py  test.py
