[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excuse-generator"
version = "1.0.2"
description = "A fun excuse generator for software engineers."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "pytest"
]
requires-python = ">=3.13"

[project.urls]
Homepage = "https://github.com/yourusername/excuse-generator"
Repository = "https://github.com/yourusername/excuse-generator"
Documentation = "https://github.com/yourusername/excuse-generator#readme"
Issues = "https://github.com/yourusername/excuse-generator/issues"

[tool.setuptools]
packages = ["excuse_generator"]

[tool.pytest.ini_options]
pythonpath = ["excuse_generator"]
addopts = "--verbose"
testpaths = ["tests"]
